--- a/src/index.css
+++ b/src/index.css
@@ -65,27 +65,22 @@ body {
 .bg-with-overlay::before {
   content: "";
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-image: url("../public/images/background.jpg");
+  inset: 0;
+  background-image: url("../public/images/background.webp");
   background-repeat: no-repeat;
   background-attachment: fixed;
-  opacity: 0.05;
+  background-size: cover;
+  opacity: 0.125;
   z-index: -1;
-  animation: backgroundMove 100s linear infinite alternate;
+  animation: backgroundMove 20s linear infinite alternate;
 }
 
 /* Static Background Image */
 .bg-with-overlay::after {
   content: "";
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-image: url("../public/images/statue.png");
+  inset: 0;
+  background-image: url("../public/images/statue.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -94,11 +89,63 @@ body {
   z-index: -1;
 }
 
+.bg-paint-brush,
+.bg-crown {
+  background-image: url("../public/images/paintBrush.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position-x: 49.5%;
+  background-position-y: 14%;
+  animation: skewAndScaleBrush 0.375s infinite alternate;
+}
+
+.bg-crown {
+  background-image: url("../public/images/crown.png");
+  background-position-x: 50%;
+  background-position-y: 4%;
+  animation: skewAndScaleCrown 0.5s infinite alternate;
+}
+
+/* Animations */
+
+/* Static Background Image */
 @keyframes backgroundMove {
   0% {
     background-position: 0 0;
   }
   100% {
     background-position: 100% 0;
+  }
+}
+
+/* Paint Brush Skew and Scale */
+@keyframes skewAndScaleBrush {
+  0% {
+    transform: skewY(0deg) scale(1);
+  }
+  33% {
+    transform: skewY(10deg) scale(1.025);
+  }
+  66% {
+    transform: skewY(10deg) scale(1);
+  }
+  100% {
+    transform: skewX(0deg) scale(1);
+  }
+}
+
+/* Crown Skew and Scale */
+@keyframes skewAndScaleCrown {
+  0% {
+    transform: skewY(0deg) scale(1);
+  }
+  33% {
+    transform: skewY(-15deg) scale(1.025);
+  }
+  66% {
+    transform: skewY(15deg) scale(1);
+  }
+  100% {
+    transform: skewY(0deg) scale(1);
   }
 }
